@@ -41,7 +41,6 @@ import org.ofbiz.base.util.UtilMisc;
 import org.ofbiz.base.util.UtilNumber;
 import org.ofbiz.base.util.UtilProperties;
 import org.ofbiz.base.util.UtilValidate;
-import org.ofbiz.common.CommonWorkers;
 import org.ofbiz.entity.Delegator;
 import org.ofbiz.entity.GenericEntityException;
 import org.ofbiz.entity.GenericPK;
@@ -50,7 +49,6 @@ import org.ofbiz.entity.condition.EntityCondition;
 import org.ofbiz.entity.condition.EntityOperator;
 import org.ofbiz.entity.util.EntityUtil;
 import org.ofbiz.manufacturing.bom.BOMTree;
-import org.ofbiz.manufacturing.bom.BOMNode;
 import org.ofbiz.manufacturing.techdata.TechDataServices;
 import org.ofbiz.product.config.ProductConfigWrapper;
 import org.ofbiz.product.config.ProductConfigWrapper.ConfigOption;
@@ -234,6 +232,7 @@ public class ProductionRunServices {
         } catch (GenericServiceException gse) {
             Debug.logWarning(gse.getMessage(), module);
         }
+        // =================================
         if (routing == null) {
             return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductRoutingNotExist", locale));
         }
@@ -331,7 +330,6 @@ public class ProductionRunServices {
                 serviceContext.put("currentStatusId","PRUN_CREATED");
                 serviceContext.put("workEffortParentId", productionRunId);
                 serviceContext.put("facilityId", facilityId);
-                serviceContext.put("reservPersons", routingTask.get("reservPersons"));
                 serviceContext.put("estimatedStartDate",startDate);
                 serviceContext.put("estimatedCompletionDate",endDate);
                 serviceContext.put("estimatedSetupMillis", routingTask.get("estimatedSetupMillis"));
@@ -346,7 +344,6 @@ public class ProductionRunServices {
                 }
                 String productionRunTaskId = (String) resultService.get("workEffortId");
                 if (Debug.infoOn()) Debug.logInfo("ProductionRunTaskId created: " + productionRunTaskId, module);
-
                 // The newly created production run task is associated to the routing task
                 // to keep track of the template used to generate it.
                 serviceContext.clear();
@@ -359,11 +356,34 @@ public class ProductionRunServices {
                 } catch (GenericServiceException e) {
                     Debug.logError(e, "Problem calling the createWorkEffortAssoc service", module);
                 }
-
-                // clone associated objects from the routing task to the run task
-                String routingTaskId = routingTaskAssoc.getString("workEffortIdTo");
-                cloneWorkEffortPartyAssignments(ctx, userLogin, routingTaskId, productionRunTaskId);
-                cloneWorkEffortCostCalcs(ctx, userLogin, routingTaskId, productionRunTaskId);
+                // copy date valid WorkEffortPartyAssignments from the routing task to the run task
+                List workEffortPartyAssignments = null;
+                try {
+                    workEffortPartyAssignments = EntityUtil.filterByDate(delegator.findByAnd("WorkEffortPartyAssignment",
+                            UtilMisc.toMap("workEffortId", routingTaskAssoc.getString("workEffortIdTo"))));
+                } catch (GenericEntityException e) {
+                    Debug.logError(e.getMessage(),  module);
+                }
+                if (workEffortPartyAssignments != null) {
+                    Iterator i = workEffortPartyAssignments.iterator();
+                    while (i.hasNext()) {
+                        GenericValue workEffortPartyAssignment = (GenericValue) i.next();
+                        Map partyToWorkEffort = UtilMisc.toMap(
+                                "workEffortId",  productionRunTaskId,
+                                "partyId",  workEffortPartyAssignment.getString("partyId"),
+                                "roleTypeId",  workEffortPartyAssignment.getString("roleTypeId"),
+                                "fromDate",  workEffortPartyAssignment.getTimestamp("fromDate"),
+                                "statusId",  workEffortPartyAssignment.getString("statusId"),
+                                "userLogin", userLogin
+                        );
+                        try {
+                            resultService = dispatcher.runSync("assignPartyToWorkEffort", partyToWorkEffort);
+                        } catch (GenericServiceException e) {
+                            Debug.logError(e, "Problem calling the assignPartyToWorkEffort service", module);
+                        }
+                        if (Debug.infoOn()) Debug.logInfo("ProductionRunPartyassigment for party: " + workEffortPartyAssignment.get("partyId") + " created", module);
+                    }
+                }
 
                 // Now we iterate thru the components returned by the getManufacturingComponents service
                 // TODO: if in the BOM a routingWorkEffortId is specified, but the task is not in the routing
@@ -372,7 +392,7 @@ public class ProductionRunServices {
                 while (pb.hasNext()) {
                     // The components variable contains a list of BOMNodes:
                     // each node represents a product (component).
-                    BOMNode node = (BOMNode) pb.next();
+                    org.ofbiz.manufacturing.bom.BOMNode node = (org.ofbiz.manufacturing.bom.BOMNode) pb.next();
                     GenericValue productBom = node.getProductAssoc();
                     if ((productBom.getString("routingWorkEffortId") == null && first) || (productBom.getString("routingWorkEffortId") != null && productBom.getString("routingWorkEffortId").equals(routingTask.getString("workEffortId")))) {
                         serviceContext.clear();
@@ -418,74 +438,6 @@ public class ProductionRunServices {
         result.put(ModelService.SUCCESS_MESSAGE, UtilProperties.getMessage(resource, "ManufacturingProductionRunCreated",UtilMisc.toMap("productionRunId", productionRunId), locale));
         return result;
     }
-
-    /**
-     * Make a copy of the party assignments that were defined on the template routing task to the new production run task.
-     */
-    private static void cloneWorkEffortPartyAssignments(DispatchContext dctx, GenericValue userLogin, String routingTaskId, String productionRunTaskId) {
-        List workEffortPartyAssignments = null;
-        try {
-            workEffortPartyAssignments = EntityUtil.filterByDate(
-                    dctx.getDelegator().findByAnd("WorkEffortPartyAssignment", UtilMisc.toMap("workEffortId", routingTaskId)));
-        } catch (GenericEntityException e) {
-            Debug.logError(e.getMessage(),  module);
-        }
-
-        if (workEffortPartyAssignments != null) {
-            Iterator i = workEffortPartyAssignments.iterator();
-            while (i.hasNext()) {
-                GenericValue workEffortPartyAssignment = (GenericValue) i.next();
-                Map partyToWorkEffort = UtilMisc.toMap(
-                        "workEffortId",  productionRunTaskId,
-                        "partyId",  workEffortPartyAssignment.getString("partyId"),
-                        "roleTypeId",  workEffortPartyAssignment.getString("roleTypeId"),
-                        "fromDate",  workEffortPartyAssignment.getTimestamp("fromDate"),
-                        "statusId",  workEffortPartyAssignment.getString("statusId"),
-                        "userLogin", userLogin
-               );
-                try {
-                    dctx.getDispatcher().runSync("assignPartyToWorkEffort", partyToWorkEffort);
-                } catch (GenericServiceException e) {
-                    Debug.logError(e, "Problem calling the assignPartyToWorkEffort service", module);
-                }
-                if (Debug.infoOn()) Debug.logInfo("ProductionRunPartyassigment for party: " + workEffortPartyAssignment.get("partyId") + " created", module);
-            }
-        }
-    }
-
-    /**
-     * Make a copy of the cost calc entities that were defined on the template routing task to the new production run task.
-     */
-    private static void cloneWorkEffortCostCalcs(DispatchContext dctx, GenericValue userLogin, String routingTaskId, String productionRunTaskId) {
-        List<GenericValue> workEffortCostCalcs = null;
-        try {
-            workEffortCostCalcs = EntityUtil.filterByDate(
-                    dctx.getDelegator().findByAnd("WorkEffortCostCalc", UtilMisc.toMap("workEffortId", routingTaskId)));
-        } catch (GenericEntityException e) {
-            Debug.logError(e.getMessage(),  module);
-        }
-
-        if (workEffortCostCalcs != null) {
-            for (GenericValue costCalc : workEffortCostCalcs) {
-                Map<String, Object> createCostCalc = UtilMisc.toMap(
-                        "workEffortId", productionRunTaskId,
-                        "costComponentTypeId", costCalc.getString("costComponentTypeId"),
-                        "costComponentCalcId", costCalc.getString("costComponentCalcId"),
-                        "fromDate", costCalc.get("fromDate"),
-                        "thruDate", costCalc.get("thruDate"),
-                        "userLogin", userLogin
-                );
-
-                try {
-                    dctx.getDispatcher().runSync("createWorkEffortCostCalc", createCostCalc);
-                } catch (GenericServiceException gse) {
-                    Debug.logError(gse, "Problem calling the createWorkEffortCostCalc service", module);
-                }
-                if (Debug.infoOn()) Debug.logInfo("ProductionRun CostCalc for cost calc: " + costCalc.getString("costComponentCalcId") + " created", module);
-            }
-        }
-    }
-
     /**
      * Update a Production Run.
      *  <li> update field and after recalculate the entire ProductionRun data (routingTask and productComponent)
@@ -515,7 +467,7 @@ public class ProductionRunServices {
                 }
 
                 BigDecimal quantity = (BigDecimal) context.get("quantity");
-                if (quantity != null &&  quantity.compareTo(productionRun.getQuantity()) != 0) {
+                if (quantity != null &&  ! quantity.equals(productionRun.getQuantity())) {
                     productionRun.setQuantity(quantity);
                 }
 
@@ -586,7 +538,7 @@ public class ProductionRunServices {
         }
 
         // PRUN_CREATED --> PRUN_SCHEDULED
-        if ("PRUN_CREATED".equals(currentStatusId) && "PRUN_SCHEDULED".equals(statusId)) {
+        if (currentStatusId.equals("PRUN_CREATED") && (statusId != null && statusId.equals("PRUN_SCHEDULED"))) {
             // change the production run status to PRUN_SCHEDULED
             Map serviceContext = new HashMap();
             serviceContext.clear();
@@ -600,7 +552,7 @@ public class ProductionRunServices {
                 Debug.logError(e, "Problem calling the updateWorkEffort service", module);
                 return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
             }
-            // change the production run tasks status to PRUN_SCHEDULED
+            // change the production run tasks status to PRUN_CLOSED
             Iterator tasks = productionRun.getProductionRunRoutingTasks().iterator();
             while (tasks.hasNext()) {
                 GenericValue task = (GenericValue)tasks.next();
@@ -621,7 +573,7 @@ public class ProductionRunServices {
             return result;
         }
 
-        // PRUN_CREATED or PRUN_SCHEDULED --> PRUN_DOC_PRINTED
+        // PRUN_CREATED or PRON_SCHEDULED --> PRUN_DOC_PRINTED
         if ((currentStatusId.equals("PRUN_CREATED") || currentStatusId.equals("PRUN_SCHEDULED")) && (statusId == null || statusId.equals("PRUN_DOC_PRINTED"))) {
             // change only the production run (header) status to PRUN_DOC_PRINTED
             Map serviceContext = new HashMap();
@@ -635,22 +587,6 @@ public class ProductionRunServices {
             } catch (GenericServiceException e) {
                 Debug.logError(e, "Problem calling the updateWorkEffort service", module);
                 return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
-            }
-            // change the production run tasks status to PRUN_DOC_PRINTED
-            Iterator tasks = productionRun.getProductionRunRoutingTasks().iterator();
-            while (tasks.hasNext()) {
-                GenericValue task = (GenericValue)tasks.next();
-                serviceContext.clear();
-                serviceContext.put("workEffortId", task.getString("workEffortId"));
-                serviceContext.put("currentStatusId", "PRUN_DOC_PRINTED");
-                serviceContext.put("userLogin", userLogin);
-                resultService = null;
-                try {
-                    resultService = dispatcher.runSync("updateWorkEffort", serviceContext);
-                } catch (GenericServiceException e) {
-                    Debug.logError(e, "Problem calling the updateWorkEffort service", module);
-                    return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
-                }
             }
             result.put("newStatusId", "PRUN_DOC_PRINTED");
             result.put(ModelService.SUCCESS_MESSAGE, UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusChanged",UtilMisc.toMap("newStatusId", "PRUN_DOC_PRINTED"), locale));
@@ -668,7 +604,6 @@ public class ProductionRunServices {
                     GenericValue mandatoryWorkEffortAssoc = (GenericValue)mandatoryWorkEfforts.get(i);
                     GenericValue mandatoryWorkEffort = mandatoryWorkEffortAssoc.getRelatedOne("FromWorkEffort");
                     if (!(mandatoryWorkEffort.getString("currentStatusId").equals("PRUN_COMPLETED") ||
-                         mandatoryWorkEffort.getString("currentStatusId").equals("PRUN_RUNNING") ||
                          mandatoryWorkEffort.getString("currentStatusId").equals("PRUN_CLOSED"))) {
                         return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChangedMandatoryProductionRunNotCompleted", locale));
                     }
@@ -808,9 +743,9 @@ public class ProductionRunServices {
             return result;
         }
 
-        // PRUN_CREATED or PRUN_SCHEDULED or PRUN_DOC_PRINTED --> PRUN_RUNNING
+        // PRUN_CREATED or PRUN_SCHEDULED --> PRUN_RUNNING
         // this should be called only when the first task is started
-        if ((currentStatusId.equals("PRUN_CREATED") || currentStatusId.equals("PRUN_SCHEDULED") || currentStatusId.equals("PRUN_DOC_PRINTED")) && (statusId == null || statusId.equals("PRUN_RUNNING"))) {
+        if ((currentStatusId.equals("PRUN_CREATED") || currentStatusId.equals("PRUN_SCHEDULED")) && (statusId == null || statusId.equals("PRUN_RUNNING"))) {
             // change the production run task status to PRUN_RUNNING
             // if necessary change the production run (header) status to PRUN_RUNNING
             if (!allPrecTaskCompletedOrRunning) {
@@ -910,17 +845,6 @@ public class ProductionRunServices {
                 Debug.logError(e, "Problem calling the updateWorkEffort service", module);
                 return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
             }
-            // Calculate and store the production run task actual costs
-            serviceContext.clear();
-            serviceContext.put("productionRunTaskId", taskId);
-            serviceContext.put("userLogin", userLogin);
-            resultService = null;
-            try {
-                resultService = dispatcher.runSync("createProductionRunTaskCosts", serviceContext);
-            } catch (GenericServiceException e) {
-                Debug.logError(e, "Problem calling the createProductionRunTaskCosts service", module);
-                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
-            }
             // If this is the last task, then the production run is marked as 'completed'
             if (allTaskCompleted) {
                 serviceContext.clear();
@@ -934,50 +858,17 @@ public class ProductionRunServices {
                     Debug.logError(e, "Problem calling the updateWorkEffort service", module);
                     return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
                 }
-                // and compute the overhead costs associated to the finished product
-                try {
-                    // get the currency
-                    GenericValue facility = productionRun.getGenericValue().getRelatedOne("Facility");
-                    Map outputMap = dispatcher.runSync("getPartyAccountingPreferences", UtilMisc.<String, Object>toMap("userLogin", userLogin, "organizationPartyId", facility.getString("ownerPartyId")));
-                    Map partyAccountingPreference = (Map)outputMap.get("partyAccountingPreference");
-                    if (partyAccountingPreference == null) {
-                        return ServiceUtil.returnError("Unable to find a currency for production run costs");
-                    }
-                    outputMap = dispatcher.runSync("getProductionRunCost", UtilMisc.<String, Object>toMap("userLogin", userLogin, "workEffortId", productionRunId));
-
-                    BigDecimal totalCost = (BigDecimal)outputMap.get("totalCost");
-                    if (totalCost == null) {
-                        totalCost = ZERO;
-                    }
-
-                    List productCostComponentCalcs = delegator.findByAnd("ProductCostComponentCalc", UtilMisc.toMap("productId", productionRun.getProductProduced().getString("productId")), UtilMisc.toList("sequenceNum"));
-                    for (int i = 0; i < productCostComponentCalcs.size(); i++) {
-                        GenericValue productCostComponentCalc = (GenericValue)productCostComponentCalcs.get(i);
-                        GenericValue costComponentCalc = productCostComponentCalc.getRelatedOne("CostComponentCalc");
-                        GenericValue customMethod = costComponentCalc.getRelatedOne("CustomMethod");
-                        if (customMethod == null) {
-                            // TODO: not supported for CostComponentCalc entries directly associated to a product
-                            Debug.logWarning("Unable to create cost component for cost component calc with id [" + costComponentCalc.getString("costComponentCalcId") + "] because customMethod is not set", module);
-                        } else {
-                            Map costMethodResult = dispatcher.runSync(customMethod.getString("customMethodName"), UtilMisc.toMap("productCostComponentCalc", productCostComponentCalc,
-                                                                                                                                 "costComponentCalc", costComponentCalc,
-                                                                                                                                 "costComponentTypePrefix", "ACTUAL",
-                                                                                                                                 "baseCost", totalCost,
-                                                                                                                                 "currencyUomId", (String)partyAccountingPreference.get("baseCurrencyUomId"),
-                                                                                                                                 "userLogin", userLogin));
-                            BigDecimal productCostAdjustment = (BigDecimal)costMethodResult.get("productCostAdjustment");
-                            totalCost = totalCost.add(productCostAdjustment);
-                            Map inMap = UtilMisc.toMap("userLogin", userLogin, "workEffortId", productionRunId);
-                            inMap.put("costComponentCalcId", costComponentCalc.getString("costComponentCalcId"));
-                            inMap.put("costComponentTypeId", "ACTUAL_" + productCostComponentCalc.getString("costComponentTypeId"));
-                            inMap.put("costUomId", (String)partyAccountingPreference.get("baseCurrencyUomId"));
-                            inMap.put("cost", productCostAdjustment);
-                            dispatcher.runSync("createCostComponent", inMap);
-                        }
-                    }
-                } catch(Exception e) {
-                    return ServiceUtil.returnError("Unable to compute overhead costs for production run: " + e.getMessage());
-                }
+            }
+            // Calculate and store the production run task actual costs
+            serviceContext.clear();
+            serviceContext.put("productionRunTaskId", taskId);
+            serviceContext.put("userLogin", userLogin);
+            resultService = null;
+            try {
+                resultService = dispatcher.runSync("createProductionRunTaskCosts", serviceContext);
+            } catch (GenericServiceException e) {
+                Debug.logError(e, "Problem calling the createProductionRunTaskCosts service", module);
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunStatusNotChanged", locale));
             }
 
             result.put("oldStatusId", oldStatusId);
@@ -992,6 +883,8 @@ public class ProductionRunServices {
     }
 
     public static Map getWorkEffortCosts(DispatchContext ctx, Map context) {
+    	Debug.logInfo("getWorkEffortCosts with inputs >> " + context, module);
+    	
         Map result = new HashMap();
         Delegator delegator = ctx.getDelegator();
         String workEffortId = (String)context.get("workEffortId");
@@ -1035,12 +928,9 @@ public class ProductionRunServices {
             List tasks = delegator.findByAnd("WorkEffort", UtilMisc.toMap("workEffortParentId", workEffortId), UtilMisc.toList("workEffortId"));
             Iterator tasksIt = tasks.iterator();
             BigDecimal totalCost = ZERO;
-            Map outputMap = dispatcher.runSync("getWorkEffortCosts", UtilMisc.<String, Object>toMap("userLogin", userLogin, "workEffortId", workEffortId));
-            BigDecimal productionRunHeaderCost = (BigDecimal)outputMap.get("totalCost");
-            totalCost = totalCost.add(productionRunHeaderCost);
             while (tasksIt.hasNext()) {
                 GenericValue task = (GenericValue)tasksIt.next();
-                outputMap = dispatcher.runSync("getWorkEffortCosts", UtilMisc.<String, Object>toMap("userLogin", userLogin, "workEffortId", task.getString("workEffortId")));
+                Map outputMap = dispatcher.runSync("getWorkEffortCosts", UtilMisc.<String, Object>toMap("userLogin", userLogin, "workEffortId", task.getString("workEffortId")));
                 BigDecimal taskCost = (BigDecimal)outputMap.get("totalCost");
                 totalCost = totalCost.add(taskCost);
             }
@@ -1066,27 +956,26 @@ public class ProductionRunServices {
             double actualTotalMilliSeconds = 0.0;
             Double actualSetupMillis = workEffort.getDouble("actualSetupMillis");
             Double actualMilliSeconds = workEffort.getDouble("actualMilliSeconds");
-            if (actualSetupMillis == null) {
-                actualSetupMillis = new Double(0.0);
+            if (actualSetupMillis != null) {
+                actualTotalMilliSeconds += actualSetupMillis.doubleValue();
             }
-            if (actualMilliSeconds == null) {
-                actualMilliSeconds = new Double(0.0);
+            if (actualMilliSeconds != null) {
+                actualTotalMilliSeconds += actualMilliSeconds.doubleValue();
             }
-            actualTotalMilliSeconds += actualSetupMillis.doubleValue();
-            actualTotalMilliSeconds += actualMilliSeconds.doubleValue();
             // Get the template (aka routing task) of the work effort
-            GenericValue routingTaskAssoc = EntityUtil.getFirst(EntityUtil.filterByDate(delegator.findByAnd("WorkEffortAssoc",
-                                                            UtilMisc.toMap("workEffortIdTo", productionRunTaskId,
-                                                                           "workEffortAssocTypeId", "WORK_EFF_TEMPLATE"))));
-            GenericValue routingTask = null;
-            if (UtilValidate.isNotEmpty(routingTaskAssoc)) {
-                routingTask = routingTaskAssoc.getRelatedOne("FromWorkEffort");
+            List routingTasks = EntityUtil.filterByDate(delegator.findByAnd("WorkEffortAssoc",
+                                                                            UtilMisc.toMap("workEffortIdTo", productionRunTaskId,
+                                                                                           "workEffortAssocTypeId", "WORK_EFF_TEMPLATE")));
+            GenericValue routingTask = EntityUtil.getFirst(routingTasks);
+            List workEffortCostCalcs = null;
+            if (UtilValidate.isEmpty(routingTask)) {
+                // there is no template, try to get the cost entries for the actual production run task, if any
+                workEffortCostCalcs = delegator.findByAnd("WorkEffortCostCalc", UtilMisc.toMap("workEffortId", productionRunTaskId));
+            } else {
+                workEffortCostCalcs = delegator.findByAnd("WorkEffortCostCalc", UtilMisc.toMap("workEffortId", routingTask.getString("workEffortIdFrom")));
             }
-
             // Get all the valid CostComponentCalc entries
-            List workEffortCostCalcs = workEffortCostCalcs = delegator.findByAnd("WorkEffortCostCalc", UtilMisc.toMap("workEffortId", productionRunTaskId));
             workEffortCostCalcs = EntityUtil.filterByDate(workEffortCostCalcs);
-
             Iterator workEffortCostCalcsIt = workEffortCostCalcs.iterator();
             while (workEffortCostCalcsIt.hasNext()) {
                 GenericValue workEffortCostCalc = (GenericValue)workEffortCostCalcsIt.next();
@@ -1124,38 +1013,6 @@ public class ProductionRunServices {
                     inMap.put("workEffortCostCalc", workEffortCostCalc);
                     inMap.put("costComponentCalc", costComponentCalc);
                     dispatcher.runSync(customMethod.getString("customMethodName"), inMap);
-                }
-            }
-
-            // Now get the cost information associated to the fixed asset and compute the costs
-            GenericValue fixedAsset = workEffort.getRelatedOne("FixedAsset");
-            if (UtilValidate.isEmpty(fixedAsset) && UtilValidate.isNotEmpty(routingTask)) {
-                fixedAsset = routingTask.getRelatedOne("FixedAsset");
-            }
-            if (UtilValidate.isNotEmpty(fixedAsset)) {
-                List setupCosts = fixedAsset.getRelatedByAnd("FixedAssetStdCost", UtilMisc.toMap("fixedAssetStdCostTypeId", "SETUP_COST"));
-                GenericValue setupCost = EntityUtil.getFirst(EntityUtil.filterByDate(setupCosts));
-                List usageCosts = fixedAsset.getRelatedByAnd("FixedAssetStdCost", UtilMisc.toMap("fixedAssetStdCostTypeId", "USAGE_COST"));
-                GenericValue usageCost = EntityUtil.getFirst(EntityUtil.filterByDate(usageCosts));
-                if (UtilValidate.isNotEmpty(setupCost) || UtilValidate.isNotEmpty(usageCost)) {
-                    String currencyUomId = (setupCost != null? setupCost.getString("amountUomId"): usageCost.getString("amountUomId"));
-                    BigDecimal setupCostAmount = ZERO;
-                    if (setupCost != null) {
-                        setupCostAmount = setupCost.getBigDecimal("amount").multiply(BigDecimal.valueOf(actualSetupMillis.doubleValue()));
-                    }
-                    BigDecimal usageCostAmount = ZERO;
-                    if (usageCost != null) {
-                        usageCostAmount = usageCost.getBigDecimal("amount").multiply(BigDecimal.valueOf(actualMilliSeconds.doubleValue()));
-                    }
-                    BigDecimal fixedAssetCost = setupCostAmount.add(usageCostAmount).setScale(decimals, rounding);
-                    fixedAssetCost = fixedAssetCost.divide(BigDecimal.valueOf(3600000), decimals, rounding);
-                    // store the cost
-                    Map inMap = UtilMisc.toMap("userLogin", userLogin, "workEffortId", productionRunTaskId);
-                    inMap.put("costComponentTypeId", "ACTUAL_ROUTE_COST");
-                    inMap.put("costUomId", currencyUomId);
-                    inMap.put("cost", fixedAssetCost);
-                    inMap.put("fixedAssetId", fixedAsset.get("fixedAssetId"));
-                    dispatcher.runSync("createCostComponent", inMap);
                 }
             }
         } catch (Exception e) {
@@ -1254,7 +1111,7 @@ public class ProductionRunServices {
                         if (! priority.equals(routingTask.get("priority"))) {
                             routingTask.set("priority", priority);
                             // update the routingTask List and re-read it to be able to have it sorted with the new value
-                            if (! productionRun.store()) {
+                            if ( ! productionRun.store()) {
                                 Debug.logError("productionRun.store(), in routingTask.priority update, fail for productionRunId ="+productionRunId,module);
                                 return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunNotUpdated", locale));
                             }
@@ -1547,7 +1404,7 @@ public class ProductionRunServices {
                         "fromDate",  workEffortPartyAssignment.getTimestamp("fromDate"),
                         "statusId",  workEffortPartyAssignment.getString("statusId"),
                         "userLogin", userLogin
-               );
+                );
                 try {
                     resultService = dispatcher.runSync("assignPartyToWorkEffort", partyToWorkEffort);
                 } catch (GenericServiceException e) {
@@ -1639,7 +1496,7 @@ public class ProductionRunServices {
                 GenericValue lot = delegator.findByPrimaryKey("Lot", UtilMisc.toMap("lotId", lotId));
                 if (lot == null) {
                     if (createLotIfNeeded.booleanValue()) {
-                        lot = delegator.makeValue("Lot", UtilMisc.toMap("lotId", lotId, "creationDate", UtilDateTime.nowTimestamp()));
+                        lot = delegator.makeValue("Lot", UtilMisc.toMap("lotId", lotId, "creationDate", UtilDateTime.nowDate()));
                         lot.create();
                     } else {
                         return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingLotNotExists", locale));
@@ -1660,23 +1517,15 @@ public class ProductionRunServices {
             Debug.logWarning(e.getMessage(), module);
             return ServiceUtil.returnError(e.getMessage());
         }
-        // the inventory item unit cost is the product's standard cost
+        // calculate the inventory item unit cost
         BigDecimal unitCost = ZERO;
         try {
-            // get the currency
-            GenericValue facility = productionRun.getGenericValue().getRelatedOne("Facility");
-            Map outputMap = dispatcher.runSync("getPartyAccountingPreferences", UtilMisc.<String, Object>toMap("userLogin", userLogin, "organizationPartyId", facility.getString("ownerPartyId")));
-            Map partyAccountingPreference = (Map)outputMap.get("partyAccountingPreference");
-            if (partyAccountingPreference == null) {
-                return ServiceUtil.returnError("Unable to find a currency for production run costs");
-            }
-            outputMap = dispatcher.runSync("getProductCost", UtilMisc.<String, Object>toMap("userLogin", userLogin, "productId", productionRun.getProductProduced().getString("productId"), "currencyUomId", (String)partyAccountingPreference.get("baseCurrencyUomId"), "costComponentTypePrefix", "EST_STD"));
-            unitCost = (BigDecimal)outputMap.get("productCost");
-            if (unitCost == null) {
-                unitCost = ZERO;
-            }
-
-        } catch (Exception e) {
+            Map outputMap = dispatcher.runSync("getProductionRunCost", UtilMisc.<String, Object>toMap("userLogin", userLogin, "workEffortId", productionRunId));
+            BigDecimal totalCost = (BigDecimal)outputMap.get("totalCost");
+            Debug.logWarning("getProductionRunCost returns >> " + outputMap, module);
+            // FIXME
+            unitCost = totalCost.divide(quantity, decimals, rounding);
+        } catch (GenericServiceException e) {
             Debug.logWarning(e.getMessage(), module);
             return ServiceUtil.returnError(e.getMessage());
         }
@@ -2052,6 +1901,12 @@ public class ProductionRunServices {
         if (addQuantityRejected == null) {
             addQuantityRejected = BigDecimal.ZERO;
         }
+        if (addSetupTime == null) {
+            addSetupTime = BigDecimal.ZERO;
+        }
+        if (addTaskTime == null) {
+            addTaskTime =  BigDecimal.ZERO;
+        }
         if (comments == null) {
             comments = "";
         }
@@ -2080,6 +1935,15 @@ public class ProductionRunServices {
             return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunTaskNotRunning", locale));
         }
 
+        BigDecimal actualMilliSeconds = theTask.getBigDecimal("actualMilliSeconds");
+        if (actualMilliSeconds == null) {
+            actualMilliSeconds = BigDecimal.ZERO;
+        }
+        BigDecimal actualSetupMillis = theTask.getBigDecimal("actualSetupMillis");
+        if (actualSetupMillis == null) {
+            actualSetupMillis = BigDecimal.ZERO;
+        }
+
         BigDecimal quantityProduced = theTask.getBigDecimal("quantityProduced");
         if (quantityProduced == null) {
             quantityProduced = BigDecimal.ZERO;
@@ -2088,6 +1952,8 @@ public class ProductionRunServices {
         if (quantityRejected == null) {
             quantityRejected = BigDecimal.ZERO;
         }
+        BigDecimal totalMillis = actualMilliSeconds.add(addTaskTime);
+        BigDecimal totalSetupMillis = actualSetupMillis.add(addSetupTime);
         BigDecimal totalQuantityProduced = quantityProduced.add(addQuantityProduced);
         BigDecimal totalQuantityRejected = quantityRejected.add(addQuantityRejected);
 
@@ -2138,11 +2004,10 @@ public class ProductionRunServices {
 
         // Create a new TimeEntry
         try {
-            /*
             String timeEntryId = delegator.getNextSeqId("TimeEntry");
             Map timeEntryFields = UtilMisc.toMap("timeEntryId", timeEntryId,
                                                  "workEffortId", workEffortId);
-            Double totalTime = Double.valueOf(addSetupTime.doubleValue() + addTaskTime.doubleValue());
+            Double totalTime = new Double(addSetupTime.doubleValue() + addTaskTime.doubleValue());
             timeEntryFields.put("partyId", partyId);
             timeEntryFields.put("fromDate", fromDate);
             timeEntryFields.put("thruDate", toDate);
@@ -2154,24 +2019,11 @@ public class ProductionRunServices {
             GenericValue timeEntry = delegator.makeValue("TimeEntry", timeEntryFields);
             timeEntry.create();
 
-            */
             Map serviceContext = new HashMap();
             serviceContext.clear();
             serviceContext.put("workEffortId", workEffortId);
-            if (addTaskTime != null) {
-                Double actualMilliSeconds = theTask.getDouble("actualMilliSeconds");
-                if (actualMilliSeconds == null) {
-                    actualMilliSeconds = Double.valueOf(0);
-                }
-                serviceContext.put("actualMilliSeconds", Double.valueOf(actualMilliSeconds.doubleValue() + addTaskTime.doubleValue()));
-            }
-            if (addSetupTime != null) {
-                Double actualSetupMillis = theTask.getDouble("actualSetupMillis");
-                if (actualSetupMillis == null) {
-                    actualSetupMillis = Double.valueOf(0);
-                }
-                serviceContext.put("actualSetupMillis", Double.valueOf(actualSetupMillis.doubleValue() + addSetupTime.doubleValue()));
-            }
+            serviceContext.put("actualMilliSeconds", totalMillis);
+            serviceContext.put("actualSetupMillis", totalSetupMillis);
             serviceContext.put("quantityProduced", totalQuantityProduced);
             serviceContext.put("quantityRejected", totalQuantityRejected);
             serviceContext.put("userLogin", userLogin);
@@ -2348,39 +2200,7 @@ public class ProductionRunServices {
                     BigDecimal totalQuantity = (BigDecimal)components.get(componentProductId);
                     componentQuantity = totalQuantity.add(componentQuantity);
                 }
-
-                // check if a bom exists
-                List bomList = null;
-                try {
-                    bomList = delegator.findByAnd("ProductAssoc", UtilMisc.toMap("productId", componentProductId, "productAssocTypeId", "MANUF_COMPONENT"));
-                    bomList = EntityUtil.filterByDate(bomList, UtilDateTime.nowTimestamp());
-                } catch (GenericEntityException e) {
-                    return ServiceUtil.returnError("try to get BOM list from productAssoc");
-                }
-                // if so create a mandatory predecessor to this production run
-                if (UtilValidate.isNotEmpty(bomList)) {
-                    serviceContext.clear();
-                    serviceContext.put("productId", componentProductId);
-                    serviceContext.put("quantity", componentQuantity);
-                    serviceContext.put("startDate", UtilDateTime.nowTimestamp());
-                    serviceContext.put("facilityId", facilityId);
-                    serviceContext.put("userLogin", userLogin);
-                    resultService = null;
-                    try {
-                        resultService = dispatcher.runSync("createProductionRunsForProductBom", serviceContext);
-                        GenericValue workEffortPreDecessor = delegator.makeValue("WorkEffortAssoc", UtilMisc.toMap(
-                                "workEffortIdTo", productionRunId, "workEffortIdFrom", resultService.get("productionRunId"),
-                                "workEffortAssocTypeId", "WORK_EFF_PRECEDENCY", "fromDate", UtilDateTime.nowTimestamp()));
-                        workEffortPreDecessor.create();
-                    } catch (GenericServiceException e) {
-                        return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingProductionRunNotCreated", locale));
-                    } catch (GenericEntityException e) {
-                        return ServiceUtil.returnError("try to create workeffort assoc");
-                    }
-
-                } else {
-                    components.put(componentProductId, componentQuantity);
-                }
+                components.put(componentProductId, componentQuantity);
 
                 //  create production run notes from comments
                 String comments = co.getComments();
@@ -2511,12 +2331,6 @@ public class ProductionRunServices {
                     result.put("productionRunId", productionRunId);
 
                     try {
-                        delegator.create("WorkOrderItemFulfillment", UtilMisc.toMap("workEffortId", productionRunId, "orderId", orderId, "orderItemSeqId", orderItemSeqId));
-                    } catch (GenericEntityException e) {
-                       return ServiceUtil.returnError("Error creating a production run for marketing package for order [" + orderId + " " + orderItemSeqId + "]: " + e.getMessage());
-                   }
-
-                    try {
                         serviceContext.clear();
                         serviceContext.put("productionRunId", productionRunId);
                         serviceContext.put("statusId", "PRUN_COMPLETED");
@@ -2556,10 +2370,10 @@ public class ProductionRunServices {
 
         String shipmentId = (String) context.get("shipmentId");
         String orderItemSeqId = (String) context.get("orderItemSeqId");
-        String shipGroupSeqId = (String) context.get("shipGroupSeqId");
         BigDecimal quantity = (BigDecimal) context.get("quantity");
         String fromDateStr = (String) context.get("fromDate");
 
+        BigDecimal amount = null;
         Date fromDate = null;
         if (UtilValidate.isNotEmpty(fromDateStr)) {
             try {
@@ -2575,12 +2389,7 @@ public class ProductionRunServices {
 
         if (orderItemSeqId != null) {
             try {
-                GenericValue orderItem = null;
-                if (UtilValidate.isNotEmpty(shipGroupSeqId)) {
-                    orderItem = delegator.findByPrimaryKey("OrderItemShipGroupAssoc", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", orderItemSeqId, "shipGroupSeqId", shipGroupSeqId));
-                } else {
-                    orderItem = delegator.findByPrimaryKey("OrderItem", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", orderItemSeqId));
-                }
+                GenericValue orderItem = delegator.findByPrimaryKey("OrderItem", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", orderItemSeqId));
                 if (orderItem == null) {
                     return ServiceUtil.returnError("OrderItem [" + orderItemSeqId + "] not found.");
                 }
@@ -2601,25 +2410,24 @@ public class ProductionRunServices {
                 return ServiceUtil.returnError("Error reading the OrderItems: " + gee.getMessage());
             }
         }
-        ArrayList productionRuns = new ArrayList();
         for (int i = 0; i < orderItems.size(); i++) {
-            GenericValue orderItemOrShipGroupAssoc = (GenericValue)orderItems.get(i);
-            String productId = null;
-            BigDecimal amount = null;
-            GenericValue orderItem = null;
-            if ("OrderItemShipGroupAssoc".equals(orderItemOrShipGroupAssoc.getEntityName())) {
-                try {
-                    orderItem = orderItemOrShipGroupAssoc.getRelatedOne("OrderItem");
-                } catch(GenericEntityException gee) {
-                    Debug.logInfo("Unable to find order item for " + orderItemOrShipGroupAssoc, module);
-                }
-            } else {
-                orderItem = orderItemOrShipGroupAssoc;
-            }
-            if (orderItem == null || orderItem.get("productId") == null) {
+            GenericValue orderItem = (GenericValue)orderItems.get(i);
+            if (orderItem.get("productId") == null) {
                 continue;
+            }
+            if (orderItem.get("quantity") != null) {
+                quantity = orderItem.getBigDecimal("quantity");
             } else {
-                productId = orderItem.getString("productId");
+                continue;
+            }
+            try {
+                List existingProductionRuns = delegator.findByAndCache("WorkOrderItemFulfillment", UtilMisc.toMap("orderId", orderItem.getString("orderId"), "orderItemSeqId", orderItem.getString("orderItemSeqId")));
+                if (UtilValidate.isNotEmpty(existingProductionRuns)) {
+                    Debug.logWarning("Production Run for order item [" + orderItem.getString("orderId") + "/" + orderItem.getString("orderItemSeqId") + "] already exists.", module);
+                    continue;
+                }
+            } catch (GenericEntityException gee) {
+                return ServiceUtil.returnError("Error reading the WorkOrderItemFulfillment: " + gee.getMessage());
             }
             if (orderItem.get("selectedAmount") != null) {
                 amount = orderItem.getBigDecimal("selectedAmount");
@@ -2627,36 +2435,18 @@ public class ProductionRunServices {
             if (amount == null) {
                 amount = BigDecimal.ZERO;
             }
-            if (orderItemOrShipGroupAssoc.get("quantity") != null) {
-                quantity = orderItemOrShipGroupAssoc.getBigDecimal("quantity");
-            } else {
-                continue;
-            }
-            try {
-                List existingProductionRuns = null;
-                if (UtilValidate.isNotEmpty(shipGroupSeqId)) {
-                    existingProductionRuns = delegator.findByAndCache("WorkOrderItemFulfillment", UtilMisc.toMap("orderId", orderItemOrShipGroupAssoc.getString("orderId"), "orderItemSeqId", orderItemOrShipGroupAssoc.getString("orderItemSeqId"), "shipGroupSeqId", shipGroupSeqId));
-                } else {
-                    existingProductionRuns = delegator.findByAndCache("WorkOrderItemFulfillment", UtilMisc.toMap("orderId", orderItemOrShipGroupAssoc.getString("orderId"), "orderItemSeqId", orderItemOrShipGroupAssoc.getString("orderItemSeqId")));
-                }
-                if (UtilValidate.isNotEmpty(existingProductionRuns)) {
-                    Debug.logWarning("Production Run for order item [" + orderItemOrShipGroupAssoc.getString("orderId") + "/" + orderItemOrShipGroupAssoc.getString("orderItemSeqId") + "] and ship group [" + shipGroupSeqId + "] already exists.", module);
-                    continue;
-                }
-            } catch (GenericEntityException gee) {
-                return ServiceUtil.returnError("Error reading the WorkOrderItemFulfillment: " + gee.getMessage());
-            }
             try {
                 ArrayList components = new ArrayList();
-                BOMTree tree = new BOMTree(productId, "MANUF_COMPONENT", fromDate, BOMTree.EXPLOSION_MANUFACTURING, delegator, dispatcher, userLogin);
+                BOMTree tree = new BOMTree(orderItem.getString("productId"), "MANUF_COMPONENT", fromDate, BOMTree.EXPLOSION_MANUFACTURING, delegator, dispatcher, userLogin);
                 tree.setRootQuantity(quantity);
                 tree.setRootAmount(amount);
                 tree.print(components);
-                productionRuns.add(tree.createManufacturingOrders(null, fromDate, null, null, null, orderId, orderItem.getString("orderItemSeqId"), shipGroupSeqId, shipmentId, userLogin));
+                tree.createManufacturingOrders(null, fromDate, null, null, null, orderId, orderItem.getString("orderItemSeqId"), shipmentId, userLogin);
             } catch (GenericEntityException gee) {
                 return ServiceUtil.returnError("Error creating bill of materials tree: " + gee.getMessage());
             }
         }
+        ArrayList productionRuns = new ArrayList();
         result.put("productionRuns" , productionRuns);
         return result;
     }
@@ -2684,7 +2474,7 @@ public class ProductionRunServices {
             tree.setRootQuantity(quantity);
             tree.setRootAmount(BigDecimal.ZERO);
             tree.print(components);
-            workEffortId = tree.createManufacturingOrders(facilityId, startDate, workEffortName, description, routingId, null, null, null, null, userLogin);
+            workEffortId = tree.createManufacturingOrders(facilityId, startDate, workEffortName, description, routingId, null, null, null, userLogin);
         } catch (GenericEntityException gee) {
             return ServiceUtil.returnError("Error creating bill of materials tree: " + gee.getMessage());
         }
@@ -2802,9 +2592,7 @@ public class ProductionRunServices {
         for (int i = 0; i < tasks.size(); i++) {
             oneTask = (GenericValue)tasks.get(i);
             taskId = oneTask.getString("workEffortId");
-            if ("PRUN_CREATED".equals(oneTask.getString("currentStatusId")) ||
-                    "PRUN_SCHEDULED".equals(oneTask.getString("currentStatusId")) ||
-                    "PRUN_DOC_PRINTED".equals(oneTask.getString("currentStatusId"))) {
+            if ("PRUN_CREATED".equals(oneTask.getString("currentStatusId"))) {
                 try {
                     Map serviceContext = UtilMisc.toMap("productionRunId", productionRunId, "workEffortId", taskId);
                     serviceContext.put("statusId", "PRUN_RUNNING");
@@ -2961,7 +2749,7 @@ public class ProductionRunServices {
             if (product == null) {
                 return ServiceUtil.returnError("Error: product with id [" + inventoryItem.get("productId") + "] not found.");
             }
-            if (CommonWorkers.hasParentType(delegator, "ProductType", "productTypeId", product.getString("productTypeId"), "parentTypeId", "MARKETING_PKG_AUTO")) {
+            if ("MARKETING_PKG_AUTO".equals(product.getString("productTypeId"))) {
                 Map serviceContext = UtilMisc.toMap("inventoryItemId", inventoryItemId,
                                                     "userLogin", userLogin);
                 /*
